--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="../Essai/essaiecss.css">
+</head>
+<body>
+    <header>
+        <a href="#" class="logo"><strong>ADVENTURER</strong></a>
+        <nav class="navbar">
+            <div class="nav-links">
+                <ul>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">ADVENTURE</a></li>
+                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="#">SUPPORT</a></li>
+                    <li><a href="#">INFO</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+</body>
+</html>
